# Leaning_Gaussian_kernel

./: .gitignore  gaussian_kernel.ipynb  gaussian_model.py  gaussian_model_example.ipynb  gaussian_model_handmade.ipynb  gaussian_model_olympic_place_daily.ipynb  gaussian_model_olympic_place_hourly.ipynb  gaussian_model_olympic_unit_daily.ipynb  gaussian_model_olympic_unit_hourly.ipynb  pyproject.toml  sin_wave.ipynb
test_data/: ガウス過程回帰_TRAIN_DATA(place毎-日別-ALLBeacon).csv  ガウス過程回帰_TRAIN_DATA(place毎-時間別-ALLBeacon).csv  ガウス過程回帰_TRAIN_DATA(unit毎-日別-ALLBeacon).csv  ガウス過程回帰_TRAIN_DATA(unit毎-時間別-ALLBeacon).csv
