[project]
name = "leaning-gaussian-kernel"
version = "0.1.0"
description = ""
authors = [
    {name = "h_nagino",email = "h_nagino@adinte.co.jp"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.3.5,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "japanize-matplotlib (>=1.1.3,<2.0.0)",
    "ipympl (>=0.9.8,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "pyyaml (>=6.0.3,<7.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "setuptools (>=80.9.0,<81.0.0)",
    "pyspark (>=4.0.1,<5.0.0)",
    "delta-spark (>=4.0.0,<5.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
